# agi-demos

./: .auto-claude-security.json  .claude_settings.json  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .impeccable.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.ray  GEMINI.md  HITL_FIXES_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  PRODUCT.md  README.md  alembic.ini  design-qa.md  docker-compose.agent-actor.yml  docker-compose.agent-pool.yml  docker-compose.agent-worker.yml  docker-compose.arcadedb-ha.yml  docker-compose.arcadedb.yml  docker-compose.cua.yml  docker-compose.observability.yml  docker-compose.ray.override.yml  docker-compose.ray.yml  docker-compose.reranker.yml  docker-compose.yml  kimi-claude.sh  otel-collector-config.yaml  package-lock.json  package.json  pnpm-lock.yaml  prometheus.yml  pyproject.toml  (+13 more)
agi-stack/: .gitignore  Cargo.toml  Makefile  README.md
agi-stack/.cargo/: config.toml
agi-stack/apps/bench/: Cargo.toml
agi-stack/apps/bench/src/: main.rs
agi-stack/apps/desktop/: .gitignore  QA.md  design-qa.md  index.html  package.json  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
agi-stack/apps/desktop/qa/: automations.html  cloud-session-queue.html  login-sso.html  mission-control-compare.html  mission-control.html  new-task-flow.html  provider-settings.html  session-conversation.html  session-evidence.html  session-plan-review.html  session-recovery.html  session-steering.html  session-terminal.html  status-terminal.html  workspace-execution.html  workspace-no-project.html
agi-stack/apps/desktop/src/: App.tsx  data.ts  i18n.tsx  main.tsx  managementData.ts  styles.css  types.ts  vite-env.d.ts  workspaceContext.ts
agi-stack/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
agi-stack/apps/desktop/tests/: a2ui-action.test.mjs  agent-definition-events.test.mjs  agent-definition-form-model.test.mjs  agent-event-parity.test.mjs  api-client.test.mjs  application-vault.test.mjs  artifact-canvas-events.test.mjs  auth-context-model.test.mjs  my-work-model.test.mjs  (+80 more)
agi-stack/apps/gateway/: Cargo.toml
agi-stack/apps/run-os-prototype/: .npmrc  design-qa.md  index.html  package-lock.json  package.json
agi-stack/apps/server/: Cargo.toml
agi-stack/crates/adapters-cli-harness/: Cargo.toml
agi-stack/crates/adapters-device/: Cargo.toml
agi-stack/crates/adapters-docker/: Cargo.toml
agi-stack/crates/adapters-http-llm/: Cargo.toml
agi-stack/crates/adapters-local-tools/: Cargo.toml
agi-stack/crates/adapters-mcp/: Cargo.toml
agi-stack/crates/adapters-mem/: Cargo.toml
agi-stack/crates/adapters-neo4j/: Cargo.toml
agi-stack/crates/adapters-postgres/: Cargo.toml
agi-stack/crates/adapters-redis/: Cargo.toml
agi-stack/crates/adapters-s3/: Cargo.toml
agi-stack/crates/adapters-secrets/: Cargo.toml
agi-stack/crates/adapters-smtp/: Cargo.toml
agi-stack/crates/adapters-wasmtime/: Cargo.toml
agi-stack/crates/bindings-uniffi/: Cargo.toml  uniffi-bindgen.rs
agi-stack/crates/bindings-wasm/: Cargo.toml  browser-smoke.mjs  prepare-package.mjs  smoke.cjs  web-persistence.mjs
agi-stack/crates/core/: Cargo.toml
agi-stack/crates/parity/: Cargo.toml
agi-stack/crates/plugin-host/: Cargo.toml
agi-stack/docs/adr/: 0001-rust-as-portable-core-language.md  0002-untrusted-plugins-wasm-only.md  0003-plugin-host-as-hexagonal-port.md  0004-plan-as-append-only-dag.md  0005-round-boundary-checkpoint.md  0006-hot-plug-via-arcswap-and-proxy-wasm-abi.md  0007-capability-registration-plugin-model.md  0008-agent-runtime-as-pluggable-harness.md  0009-control-data-plane-separation.md  0010-xds-style-config-distribution.md  0011-agent-supervised-verdict.md
agi-stack/docs/architecture/: 00-overview.md  01-portable-core.md  02-extensibility.md  03-platform-adapters.md  04-spike-evidence.md  05-roadmap.md  06-agent-core-design.md  07-plugin-runtime-architecture.md  08-control-data-plane-separation.md  09-shipping-matrix.md  10-production-migration.md  11-i1-i7-execution-plan.md  README.md
agi-stack/docs/research/: README.md  argo-internals.md  flink-internals.md  gateways-internals.md  istio-k8s-control-data-plane.md  openclaw-runtime-internals.md
agi-stack/scripts/: bench-trend-summary.py  build-desktop-icons.sh  build-ios.sh  check-desktop-bundle.sh  check-macos-dev-signing.sh  check-strangler-gate.sh  ios-smoketest.swift  run-macos-dev-signed.sh  run-macos-tauri-cargo.sh
cua-mcp-server/: Dockerfile  README.md  pyproject.toml
cua-mcp-server/src/: __init__.py
cua-mcp-server/src/cua/: __init__.py  adapter.py  config.py
cua-mcp-server/src/server/: main.py  websocket_server.py
cua-mcp-server/src/tools/: base.py  registry.py
evals/: .gitignore  README.md  pyproject.toml
evals/cases/: config_timeout_fix.yaml  docs_backed_multiply.yaml  greeting_refactor.yaml  palindrome_bug_fix.yaml  smoke_toy_repo.yaml  toy_add_fix.yaml
evals/configs/: mini.example.yaml
evals/datasets/: first_batch.yaml
evals/fixtures/config_project/: README.md  app_config.py
evals/fixtures/docs_project/: README.md
evals/fixtures/greeting_project/: README.md  greeting.py
evals/fixtures/palindrome_project/: README.md  text_utils.py
evals/fixtures/toy_project/: README.md
evals/memstack_agent_evals/: __init__.py  cases.py  cli.py  models.py  subprocess_utils.py
evals/memstack_agent_evals/harness/: __init__.py  isolation.py  results.py  verify.py  workspace.py
evals/memstack_agent_evals/runners/: base.py  memstack_runner.py  mini_runner.py
evals/tests/: test_cases.py  test_isolation.py  test_mini_runner.py  test_verify.py  test_workspace.py
examples/plugins/memstack-plugin-feishu/: .gitignore  README.md  pyproject.toml
examples/plugins/memstack-plugin-template/: .gitignore  LICENSE  README.md  pyproject.toml
sdk/memstack_cli/: README.md  pyproject.toml
sdk/memstack_cli/memstack_cli/: __init__.py  auth.py  cli.py  client.py
sdk/memstack_cli/tests/: test_commands.py
spikes/rust-portable-core/: .gitignore  Cargo.toml  README.md
spikes/rust-portable-core/harness/: node-smoke.cjs
(+15056 files in other folders)
