[project]
name = "memstack"
version = "0.1.0"
description = "企业级 AI 记忆云平台"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cluade code" }]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "httpx[socks]>=0.25.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "dashscope>=1.20.0",
    "greenlet>=3.3.0",
    "openai>=2.8.0",
    "aiosqlite>=0.22.1",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.0",
    # ZhipuAI (Z.AI) official SDK
    "zai-sdk>=0.2.0",
    # LiteLLM for multi-provider LLM support (1.81+ for zai provider)
    "litellm>=1.81.0",
    # Web search and scraping tools
    "tavily-python>=0.5.0",
    "playwright>=1.45.0",
    "orjson>=3.11.5",
    "slowapi>=0.1.9",
    "networkx>=3.6.1",
    "docker>=7.1.0",
    "aioboto3>=15.5.0",
    # MCP (Model Context Protocol) for tool integration
    "mcp>=1.0.0",
    # Ray for Actor-based agent runtime
    "ray>=2.9.0",
    "lark-oapi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "faker>=20.0.0",
]

neo4j = ["neo4j>=5.14.0"]

evaluation = [
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "ANN401", # disallow Any type annotations
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # lambda assignment (sometimes clearer)
    "E741",   # ambiguous variable name (l, O, I)
    "N802",   # function name lowercase (test methods may vary)
    "N805",   # first argument of method should be self
    "N806",   # variable in function should be lowercase
    "N815",   # mixedCase variable in class scope
    "N818",   # exception should be named with Error suffix
    "B007",   # unused loop variable (often intentional)
    "B008",   # function call in default argument (FastAPI Depends)
    "B017",   # pytest.raises without match
    "B023",   # function variable not used in loop
    "B024",   # abstract class without abstract methods
    "B904",   # raise without from (sometimes intentional)
    "B905",   # zip without strict (Python 3.10+)
    "C401",   # unnecessary generator (sometimes clearer)
    "C416",   # unnecessary comprehension (sometimes clearer)
    "UP006",  # use dict instead of Dict (gradual migration)
    "UP007",  # use X | Y instead of Optional (gradual migration)
    "UP017",  # use datetime.UTC (gradual migration)
    "UP035",  # deprecated typing imports (gradual migration)
    "UP041",  # replace aliased TimeoutError (gradual migration)
    "UP045",  # use X | None instead of Optional (gradual migration)
    "UP046",  # use X | Y for Union (gradual migration)
    "UP047",  # use X | Y for Optional (gradual migration)
    "SIM102", # nested if (sometimes clearer)
    "SIM103", # return condition directly (sometimes clearer)
    "SIM105", # contextlib.suppress (sometimes clearer with try/except)
    "SIM108", # ternary operator (sometimes clearer to use if/else)
    "SIM110", # any/all instead of loop (sometimes clearer)
    "SIM116", # dict instead of if-elif (sometimes clearer)
    "SIM117", # nested with (sometimes clearer)
    "SIM118", # key in dict vs dict.keys() (micro-optimization)
    "SIM222", # or instead of any (sometimes clearer)
    "RUF001", # ambiguous unicode in string (Chinese allowed)
    "RUF002", # ambiguous unicode in docstring (Chinese allowed)
    "RUF003", # ambiguous unicode in comment (Chinese allowed)
    "RUF005", # collection literal concatenation (sometimes clearer)
    "RUF006", # asyncio.create_task reference (sometimes not needed)
    "RUF012", # mutable class attribute ClassVar (too strict)
    "RUF013", # implicit Optional (gradual migration)
    "RUF015", # prefer next over list[0] (sometimes clearer)
    "RUF022", # unsorted __all__ (minor)
    "RUF043", # ambiguous encoding in config (intentional)
    "RUF059", # unused unpacked assignment (often intentional)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]
"examples/*" = ["E402"]
"src/tests/*" = ["N802", "N803"]  # test methods/params can have non-standard names
"alembic/*" = ["N999"]  # alembic migrations have non-standard module names

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-single-line = false

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["sdk/"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]

[tool.uv]

# Disabled aliyun mirror for CI compatibility
# [[tool.uv.index]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple"
# default = true
