[project]
name = "memstack"
version = "0.1.0"
description = "企业级 AI 记忆云平台"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cluade code" }]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "httpx[socks]>=0.25.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "dashscope>=1.20.0",
    "greenlet>=3.3.0",
    "openai>=2.8.0",
    "aiosqlite>=0.22.1",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.0",
    # ZhipuAI (Z.AI) official SDK
    "zai-sdk>=0.2.0",
    # LiteLLM for multi-provider LLM support (1.81+ for zai provider)
    "litellm>=1.81.0",
    # Web search and scraping tools
    "tavily-python>=0.5.0",
    "playwright>=1.45.0",
    "orjson>=3.11.5",
    "slowapi>=0.1.9",
    "networkx>=3.6.1",
    "docker>=7.1.0",
    "aioboto3>=15.5.0",
    # MCP (Model Context Protocol) for tool integration
    "mcp>=1.0.0",
    # Ray for Actor-based agent runtime
    "ray>=2.9.0",
    "lark-oapi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "faker>=20.0.0",
]

neo4j = ["neo4j>=5.14.0"]

evaluation = [
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific
    # Type annotation rules (new)
    "ANN001", # function parameter type annotation missing
    "ANN002", # *args type annotation missing
    "ANN003", # **kwargs type annotation missing
    "ANN201", # public function return type missing
    "ANN202", # private function return type missing
    # "ANN401", # disallow Any (enable progressively)
    # Code quality
    "C901",   # cyclomatic complexity (threshold configurable)
    "PLR091", # Pylint refactoring rules
]
ignore = [
    # Formatting (handled by formatter)
    "E501",
    # Naming style (project conventions)
    "N802", "N805", "N806", "N815", "N818",
    # Micro-optimizations (readability first)
    "C401", "C416", "SIM102", "SIM108", "SIM110", "SIM116", "SIM118",
    # Chinese characters (business requirement)
    "RUF001", "RUF002", "RUF003",
    # FastAPI dependency injection
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# Delayed import exemptions (logging config etc.)
"src/infrastructure/adapters/primary/web/main.py" = ["E402"]
"src/infrastructure/adapters/secondary/ray/__init__.py" = ["E402"]
"src/infrastructure/llm/litellm/litellm_client.py" = ["E402"]
"src/tests/unit/infrastructure/llm/conftest.py" = ["E402"]

# Test files relaxed
"src/tests/**" = ["ANN001", "ANN201", "ANN202", "N802", "N803"]

# Alembic migration files
"src/alembic/**" = ["ANN", "N999"]

# Legacy modules (progressively tighten)
"src/memstack_agent/**" = ["ANN"]

# High cyclomatic complexity files (progressively refactor)
"src/application/services/agent_service.py" = ["C901"]
"src/infrastructure/agent/core/react_agent.py" = ["C901"]
"src/infrastructure/agent/processor/processor.py" = ["C901"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12  # Default 10, relaxed slightly

[tool.ruff.lint.pylint]
max-args = 8  # Default 5, FastAPI dependency injection requires more params

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

# Excluded directories
exclude = [
    "src/tests/",
    "src/alembic/",
    "src/memstack_agent/",  # Legacy code, migrate progressively
]

# Handle untyped third-party libraries
ignore_missing_imports = true

# Progressive enablement - fix first, then enable
# disallow_untyped_calls = true   # Phase 2
# disallow_incomplete_defs = true  # Phase 2
# check_untyped_defs = true        # Phase 3

[[tool.mypy.overrides]]
module = "src.infrastructure.llm.litellm.*"
ignore_errors = true  # Legacy code

[[tool.mypy.overrides]]
module = "src.infrastructure.adapters.secondary.ray.*"
ignore_errors = true  # Ray library type issues

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]

[tool.uv]

# Disabled aliyun mirror for CI compatibility
# [[tool.uv.index]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple"
# default = true
