[project]
name = "memstack-agent-evals"
version = "0.1.0"
description = "Independent agent evaluation harness for MemStack using mini-swe-agent."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mini-swe-agent>=2.0.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
memstack-agent-evals = "memstack_agent_evals.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["memstack_agent_evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
