[package]
name = "agistack-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agistack-core = { path = "../../crates/core" }
agistack-plugin-host = { path = "../../crates/plugin-host" }
agistack-adapters-mem = { path = "../../crates/adapters-mem" }
agistack-adapters-device = { path = "../../crates/adapters-device" }
agistack-adapters-http-llm = { path = "../../crates/adapters-http-llm" }
agistack-adapters-postgres = { path = "../../crates/adapters-postgres" }
agistack-adapters-wasmtime = { path = "../../crates/adapters-wasmtime" }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
