[package]
name = "agistack-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agistack-core = { path = "../../crates/core" }
agistack-plugin-host = { path = "../../crates/plugin-host" }
agistack-adapters-mem = { path = "../../crates/adapters-mem" }
agistack-adapters-device = { path = "../../crates/adapters-device" }
agistack-adapters-http-llm = { path = "../../crates/adapters-http-llm" }
agistack-adapters-postgres = { path = "../../crates/adapters-postgres" }
agistack-adapters-neo4j = { path = "../../crates/adapters-neo4j" }
agistack-adapters-redis = { path = "../../crates/adapters-redis" }
agistack-adapters-mcp = { path = "../../crates/adapters-mcp" }
agistack-adapters-docker = { path = "../../crates/adapters-docker" }
agistack-adapters-secrets = { path = "../../crates/adapters-secrets" }
agistack-adapters-s3 = { path = "../../crates/adapters-s3" }
agistack-adapters-smtp = { path = "../../crates/adapters-smtp" }
agistack-adapters-wasmtime = { path = "../../crates/adapters-wasmtime" }
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process", "signal", "time"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = "0.10"
sha2 = "0.10"
async-trait.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.23"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5"] }
zip = { version = "4.2", default-features = false, features = ["deflate-flate2-zlib-rs"] }
base64 = "0.22"

[dev-dependencies]
serde_urlencoded = "0.7"
agistack-parity = { path = "../../crates/parity" }
