[package]
name = "agistack-adapters-device"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agistack-core = { path = "../core" }
async-trait.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
instant-distance = "0.6"

[dev-dependencies]
agistack-adapters-mem = { path = "../adapters-mem" }
futures.workspace = true
